parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> global_declaration
Rule 2     global_declaration -> function_definition
Rule 3     global_declaration -> declaration
Rule 4     function_definition -> type_specifier direct_declarator compound_statement
Rule 5     function_definition -> direct_declarator declaration compound_statement
Rule 6     type_specifier -> VOID
Rule 7     type_specifier -> CHAR
Rule 8     type_specifier -> INT
Rule 9     type_specifier -> FLOAT
Rule 10    direct_declarator -> ID
Rule 11    direct_declarator -> LPAREN direct_declarator RPAREN
Rule 12    direct_declarator -> direct_declarator LBRACKET RBRACKET
Rule 13    direct_declarator -> direct_declarator LBRACKET binary_expression RBRACKET
Rule 14    direct_declarator -> direct_declarator LPAREN parameter_list RPAREN
Rule 15    direct_declarator -> direct_declarator LPAREN RPAREN
Rule 16    direct_declarator -> direct_declarator LPAREN ID RPAREN
Rule 17    binary_expression -> cast_expression
Rule 18    binary_expression -> binary_expression TIMES binary_expression
Rule 19    binary_expression -> binary_expression DIVIDE binary_expression
Rule 20    binary_expression -> binary_expression MOD binary_expression
Rule 21    binary_expression -> binary_expression PLUS binary_expression
Rule 22    binary_expression -> binary_expression MINUS binary_expression
Rule 23    binary_expression -> binary_expression LT binary_expression
Rule 24    binary_expression -> binary_expression LE binary_expression
Rule 25    binary_expression -> binary_expression HT binary_expression
Rule 26    binary_expression -> binary_expression HE binary_expression
Rule 27    binary_expression -> binary_expression EQ binary_expression
Rule 28    binary_expression -> binary_expression DIFF binary_expression
Rule 29    binary_expression -> binary_expression AND binary_expression
Rule 30    binary_expression -> binary_expression OR binary_expression
Rule 31    cast_expression -> unary_expression
Rule 32    cast_expression -> LPAREN type_specifier RPAREN cast_expression
Rule 33    unary_expression -> postfix_expression
Rule 34    unary_expression -> PLUSPLUS unary_expression
Rule 35    unary_expression -> MINUSMINUS unary_expression
Rule 36    unary_expression -> unary_operator cast_expression
Rule 37    postfix_expression -> primary_expression
Rule 38    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 39    postfix_expression -> postfix_expression LPAREN expression RPAREN
Rule 40    postfix_expression -> postfix_expression LPAREN RPAREN
Rule 41    postfix_expression -> postfix_expression PLUSPLUS
Rule 42    postfix_expression -> postfix_expression MINUSMINUS
Rule 43    primary_expression -> ID
Rule 44    primary_expression -> constant
Rule 45    primary_expression -> LPAREN expression RPAREN
Rule 46    constant -> INT_CONST
Rule 47    constant -> STRING
Rule 48    constant -> FLOAT_CONST
Rule 49    expression -> assignment_expression
Rule 50    expression -> expression COMMA assignment_expression
Rule 51    assignment_expression -> binary_expression
Rule 52    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 53    assignment_operator -> EQUALS
Rule 54    assignment_operator -> TIMESASSIGN
Rule 55    assignment_operator -> DIVIDEASSIGN
Rule 56    assignment_operator -> MODASSIGN
Rule 57    assignment_operator -> PLUSASSIGN
Rule 58    assignment_operator -> MINUSASSIGN
Rule 59    unary_operator -> ADDRESS
Rule 60    unary_operator -> TIMES
Rule 61    unary_operator -> PLUS
Rule 62    unary_operator -> MINUS
Rule 63    unary_operator -> UNARYDIFF
Rule 64    parameter_list -> parameter_declaration
Rule 65    parameter_list -> parameter_list parameter_declaration
Rule 66    parameter_declaration -> type_specifier direct_declarator
Rule 67    declaration -> type_specifier init_declarator_list SEMI
Rule 68    declaration -> type_specifier SEMI
Rule 69    init_declarator_list -> init_declarator
Rule 70    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 71    init_declarator -> direct_declarator
Rule 72    init_declarator -> direct_declarator EQ initializer
Rule 73    init_declarator -> direct_declarator EQUALS initializer
Rule 74    initializer -> assignment_expression
Rule 75    initializer -> LBRACE initializer_list RBRACE
Rule 76    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 77    initializer_list -> initializer
Rule 78    initializer_list -> initializer_list COMMA initializer
Rule 79    compound_statement -> LBRACE declaration statement RBRACE
Rule 80    compound_statement -> LBRACE statement RBRACE
Rule 81    statement -> expression_statement
Rule 82    statement -> compound_statement
Rule 83    statement -> selection_statement
Rule 84    statement -> iteration_statement
Rule 85    statement -> jump_statement
Rule 86    statement -> assert_statement
Rule 87    statement -> print_statement
Rule 88    statement -> read_statement
Rule 89    expression_statement -> LBRACE expression RBRACE SEMI
Rule 90    selection_statement -> IF LPAREN expression RPAREN statement
Rule 91    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 92    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 93    iteration_statement -> FOR LPAREN LBRACE expression RBRACE SEMI LBRACE expression RBRACE SEMI LBRACE expression RBRACE RPAREN statement
Rule 94    jump_statement -> BREAK SEMI
Rule 95    jump_statement -> RETURN expression SEMI
Rule 96    jump_statement -> RETURN SEMI
Rule 97    assert_statement -> ASSERT expression SEMI
Rule 98    print_statement -> PRINT LPAREN LBRACE expression RBRACE RPAREN SEMI
Rule 99    read_statement -> READ LPAREN expression RPAREN SEMI

Terminals, with rules where they appear

ADDRESS              : 59
AND                  : 29
ASSERT               : 97
BREAK                : 94
CHAR                 : 7
COMMA                : 50 70 76 78
DIFF                 : 28
DIVIDE               : 19
DIVIDEASSIGN         : 55
ELSE                 : 91
EQ                   : 27 72
EQUALS               : 53 73
FLOAT                : 9
FLOAT_CONST          : 48
FOR                  : 93
HE                   : 26
HT                   : 25
ID                   : 10 16 43
IF                   : 90 91
INT                  : 8
INT_CONST            : 46
LBRACE               : 75 76 79 80 89 93 93 93 98
LBRACKET             : 12 13 38
LE                   : 24
LPAREN               : 11 14 15 16 32 39 40 45 90 91 92 93 98 99
LT                   : 23
MINUS                : 22 62
MINUSASSIGN          : 58
MINUSMINUS           : 35 42
MOD                  : 20
MODASSIGN            : 56
OR                   : 30
PLUS                 : 21 61
PLUSASSIGN           : 57
PLUSPLUS             : 34 41
PRINT                : 98
RBRACE               : 75 76 79 80 89 93 93 93 98
RBRACKET             : 12 13 38
READ                 : 99
RETURN               : 95 96
RPAREN               : 11 14 15 16 32 39 40 45 90 91 92 93 98 99
SEMI                 : 67 68 89 93 93 94 95 96 97 98 99
STRING               : 47
TIMES                : 18 60
TIMESASSIGN          : 54
UNARYDIFF            : 63
VOID                 : 6
WHILE                : 92
error                : 

Nonterminals, with rules where they appear

assert_statement     : 86
assignment_expression : 49 50 52 74
assignment_operator  : 52
binary_expression    : 13 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 51
cast_expression      : 17 32 36
compound_statement   : 4 5 82
constant             : 44
declaration          : 3 5 79
direct_declarator    : 4 5 11 12 13 14 15 16 66 71 72 73
expression           : 38 39 45 50 89 90 91 92 93 93 93 95 97 98 99
expression_statement : 81
function_definition  : 2
global_declaration   : 1
init_declarator      : 69 70
init_declarator_list : 67 70
initializer          : 72 73 77 78
initializer_list     : 75 76 78
iteration_statement  : 84
jump_statement       : 85
parameter_declaration : 64 65
parameter_list       : 14 65
postfix_expression   : 33 38 39 40 41 42
primary_expression   : 37
print_statement      : 87
program              : 0
read_statement       : 88
selection_statement  : 83
statement            : 79 80 90 91 91 92 93
type_specifier       : 4 32 66 67 68
unary_expression     : 31 34 35 52
unary_operator       : 36

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_declaration
    (2) global_declaration -> . function_definition
    (3) global_declaration -> . declaration
    (4) function_definition -> . type_specifier direct_declarator compound_statement
    (5) function_definition -> . direct_declarator declaration compound_statement
    (67) declaration -> . type_specifier init_declarator_list SEMI
    (68) declaration -> . type_specifier SEMI
    (6) type_specifier -> . VOID
    (7) type_specifier -> . CHAR
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) direct_declarator -> . ID
    (11) direct_declarator -> . LPAREN direct_declarator RPAREN
    (12) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (13) direct_declarator -> . direct_declarator LBRACKET binary_expression RBRACKET
    (14) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (15) direct_declarator -> . direct_declarator LPAREN RPAREN
    (16) direct_declarator -> . direct_declarator LPAREN ID RPAREN

    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    ID              shift and go to state 11
    LPAREN          shift and go to state 12

    program                        shift and go to state 1
    global_declaration             shift and go to state 2
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    type_specifier                 shift and go to state 5
    direct_declarator              shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> global_declaration .

    $end            reduce using rule 1 (program -> global_declaration .)


state 3

    (2) global_declaration -> function_definition .

    $end            reduce using rule 2 (global_declaration -> function_definition .)


state 4

    (3) global_declaration -> declaration .

    $end            reduce using rule 3 (global_declaration -> declaration .)


state 5

    (4) function_definition -> type_specifier . direct_declarator compound_statement
    (67) declaration -> type_specifier . init_declarator_list SEMI
    (68) declaration -> type_specifier . SEMI
    (10) direct_declarator -> . ID
    (11) direct_declarator -> . LPAREN direct_declarator RPAREN
    (12) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (13) direct_declarator -> . direct_declarator LBRACKET binary_expression RBRACKET
    (14) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (15) direct_declarator -> . direct_declarator LPAREN RPAREN
    (16) direct_declarator -> . direct_declarator LPAREN ID RPAREN
    (69) init_declarator_list -> . init_declarator
    (70) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (71) init_declarator -> . direct_declarator
    (72) init_declarator -> . direct_declarator EQ initializer
    (73) init_declarator -> . direct_declarator EQUALS initializer

    SEMI            shift and go to state 15
    ID              shift and go to state 11
    LPAREN          shift and go to state 12

    direct_declarator              shift and go to state 13
    init_declarator_list           shift and go to state 14
    init_declarator                shift and go to state 16

state 6

    (5) function_definition -> direct_declarator . declaration compound_statement
    (12) direct_declarator -> direct_declarator . LBRACKET RBRACKET
    (13) direct_declarator -> direct_declarator . LBRACKET binary_expression RBRACKET
    (14) direct_declarator -> direct_declarator . LPAREN parameter_list RPAREN
    (15) direct_declarator -> direct_declarator . LPAREN RPAREN
    (16) direct_declarator -> direct_declarator . LPAREN ID RPAREN
    (67) declaration -> . type_specifier init_declarator_list SEMI
    (68) declaration -> . type_specifier SEMI
    (6) type_specifier -> . VOID
    (7) type_specifier -> . CHAR
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT

    LBRACKET        shift and go to state 18
    LPAREN          shift and go to state 19
    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10

    declaration                    shift and go to state 17
    type_specifier                 shift and go to state 20

state 7

    (6) type_specifier -> VOID .

    SEMI            reduce using rule 6 (type_specifier -> VOID .)
    ID              reduce using rule 6 (type_specifier -> VOID .)
    LPAREN          reduce using rule 6 (type_specifier -> VOID .)
    RPAREN          reduce using rule 6 (type_specifier -> VOID .)


state 8

    (7) type_specifier -> CHAR .

    SEMI            reduce using rule 7 (type_specifier -> CHAR .)
    ID              reduce using rule 7 (type_specifier -> CHAR .)
    LPAREN          reduce using rule 7 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 7 (type_specifier -> CHAR .)


state 9

    (8) type_specifier -> INT .

    SEMI            reduce using rule 8 (type_specifier -> INT .)
    ID              reduce using rule 8 (type_specifier -> INT .)
    LPAREN          reduce using rule 8 (type_specifier -> INT .)
    RPAREN          reduce using rule 8 (type_specifier -> INT .)


state 10

    (9) type_specifier -> FLOAT .

    SEMI            reduce using rule 9 (type_specifier -> FLOAT .)
    ID              reduce using rule 9 (type_specifier -> FLOAT .)
    LPAREN          reduce using rule 9 (type_specifier -> FLOAT .)
    RPAREN          reduce using rule 9 (type_specifier -> FLOAT .)


state 11

    (10) direct_declarator -> ID .

    LBRACKET        reduce using rule 10 (direct_declarator -> ID .)
    LPAREN          reduce using rule 10 (direct_declarator -> ID .)
    VOID            reduce using rule 10 (direct_declarator -> ID .)
    CHAR            reduce using rule 10 (direct_declarator -> ID .)
    INT             reduce using rule 10 (direct_declarator -> ID .)
    FLOAT           reduce using rule 10 (direct_declarator -> ID .)
    EQ              reduce using rule 10 (direct_declarator -> ID .)
    EQUALS          reduce using rule 10 (direct_declarator -> ID .)
    LBRACE          reduce using rule 10 (direct_declarator -> ID .)
    SEMI            reduce using rule 10 (direct_declarator -> ID .)
    COMMA           reduce using rule 10 (direct_declarator -> ID .)
    RPAREN          reduce using rule 10 (direct_declarator -> ID .)


state 12

    (11) direct_declarator -> LPAREN . direct_declarator RPAREN
    (10) direct_declarator -> . ID
    (11) direct_declarator -> . LPAREN direct_declarator RPAREN
    (12) direct_declarator -> . direct_declarator LBRACKET RBRACKET
    (13) direct_declarator -> . direct_declarator LBRACKET binary_expression RBRACKET
    (14) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (15) direct_declarator -> . direct_declarator LPAREN RPAREN
    (16) direct_declarator -> . direct_declarator LPAREN ID RPAREN

    ID              shift and go to state 11
    LPAREN          shift and go to state 12

    direct_declarator              shift and go to state 21

state 13

    (4) function_definition -> type_specifier direct_declarator . compound_statement
    (12) direct_declarator -> direct_declarator . LBRACKET RBRACKET
    (13) direct_declarator -> direct_declarator . LBRACKET binary_expression RBRACKET
    (14) direct_declarator -> direct_declarator . LPAREN parameter_list RPAREN
    (15) direct_declarator -> direct_declarator . LPAREN RPAREN
    (16) direct_declarator -> direct_declarator . LPAREN ID RPAREN
    (71) init_declarator -> direct_declarator .
    (72) init_declarator -> direct_declarator . EQ initializer
    (73) init_declarator -> direct_declarator . EQUALS initializer
    (79) compound_statement -> . LBRACE declaration statement RBRACE
    (80) compound_statement -> . LBRACE statement RBRACE

    LBRACKET        shift and go to state 18
    LPAREN          shift and go to state 19
    SEMI            reduce using rule 71 (init_declarator -> direct_declarator .)
    COMMA           reduce using rule 71 (init_declarator -> direct_declarator .)
    EQ              shift and go to state 23
    EQUALS          shift and go to state 24
    LBRACE          shift and go to state 25

    compound_statement             shift and go to state 22

state 14

    (67) declaration -> type_specifier init_declarator_list . SEMI
    (70) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            shift and go to state 26
    COMMA           shift and go to state 27


state 15

    (68) declaration -> type_specifier SEMI .

    $end            reduce using rule 68 (declaration -> type_specifier SEMI .)
    LBRACE          reduce using rule 68 (declaration -> type_specifier SEMI .)
    IF              reduce using rule 68 (declaration -> type_specifier SEMI .)
    WHILE           reduce using rule 68 (declaration -> type_specifier SEMI .)
    FOR             reduce using rule 68 (declaration -> type_specifier SEMI .)
    BREAK           reduce using rule 68 (declaration -> type_specifier SEMI .)
    RETURN          reduce using rule 68 (declaration -> type_specifier SEMI .)
    ASSERT          reduce using rule 68 (declaration -> type_specifier SEMI .)
    PRINT           reduce using rule 68 (declaration -> type_specifier SEMI .)
    READ            reduce using rule 68 (declaration -> type_specifier SEMI .)


state 16

    (69) init_declarator_list -> init_declarator .

    SEMI            reduce using rule 69 (init_declarator_list -> init_declarator .)
    COMMA           reduce using rule 69 (init_declarator_list -> init_declarator .)


state 17

    (5) function_definition -> direct_declarator declaration . compound_statement
    (79) compound_statement -> . LBRACE declaration statement RBRACE
    (80) compound_statement -> . LBRACE statement RBRACE

    LBRACE          shift and go to state 25

    compound_statement             shift and go to state 28

state 18

    (12) direct_declarator -> direct_declarator LBRACKET . RBRACKET
    (13) direct_declarator -> direct_declarator LBRACKET . binary_expression RBRACKET
    (17) binary_expression -> . cast_expression
    (18) binary_expression -> . binary_expression TIMES binary_expression
    (19) binary_expression -> . binary_expression DIVIDE binary_expression
    (20) binary_expression -> . binary_expression MOD binary_expression
    (21) binary_expression -> . binary_expression PLUS binary_expression
    (22) binary_expression -> . binary_expression MINUS binary_expression
    (23) binary_expression -> . binary_expression LT binary_expression
    (24) binary_expression -> . binary_expression LE binary_expression
    (25) binary_expression -> . binary_expression HT binary_expression
    (26) binary_expression -> . binary_expression HE binary_expression
    (27) binary_expression -> . binary_expression EQ binary_expression
    (28) binary_expression -> . binary_expression DIFF binary_expression
    (29) binary_expression -> . binary_expression AND binary_expression
    (30) binary_expression -> . binary_expression OR binary_expression
    (31) cast_expression -> . unary_expression
    (32) cast_expression -> . LPAREN type_specifier RPAREN cast_expression
    (33) unary_expression -> . postfix_expression
    (34) unary_expression -> . PLUSPLUS unary_expression
    (35) unary_expression -> . MINUSMINUS unary_expression
    (36) unary_expression -> . unary_operator cast_expression
    (37) postfix_expression -> . primary_expression
    (38) postfix_expression -> . postfix_expression LBRACKET expression RBRACKET
    (39) postfix_expression -> . postfix_expression LPAREN expression RPAREN
    (40) postfix_expression -> . postfix_expression LPAREN RPAREN
    (41) postfix_expression -> . postfix_expression PLUSPLUS
    (42) postfix_expression -> . postfix_expression MINUSMINUS
    (59) unary_operator -> . ADDRESS
    (60) unary_operator -> . TIMES
    (61) unary_operator -> . PLUS
    (62) unary_operator -> . MINUS
    (63) unary_operator -> . UNARYDIFF
    (43) primary_expression -> . ID
    (44) primary_expression -> . constant
    (45) primary_expression -> . LPAREN expression RPAREN
    (46) constant -> . INT_CONST
    (47) constant -> . STRING
    (48) constant -> . FLOAT_CONST

    RBRACKET        shift and go to state 29
    LPAREN          shift and go to state 36
    PLUSPLUS        shift and go to state 38
    MINUSMINUS      shift and go to state 39
    ADDRESS         shift and go to state 42
    TIMES           shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    UNARYDIFF       shift and go to state 43
    ID              shift and go to state 44
    INT_CONST       shift and go to state 46
    STRING          shift and go to state 47
    FLOAT_CONST     shift and go to state 48

    binary_expression              shift and go to state 30
    cast_expression                shift and go to state 31
    unary_expression               shift and go to state 35
    postfix_expression             shift and go to state 37
    unary_operator                 shift and go to state 40
    primary_expression             shift and go to state 41
    constant                       shift and go to state 45

state 19

    (14) direct_declarator -> direct_declarator LPAREN . parameter_list RPAREN
    (15) direct_declarator -> direct_declarator LPAREN . RPAREN
    (16) direct_declarator -> direct_declarator LPAREN . ID RPAREN
    (64) parameter_list -> . parameter_declaration
    (65) parameter_list -> . parameter_list parameter_declaration
    (66) parameter_declaration -> . type_specifier direct_declarator
    (6) type_specifier -> . VOID
    (7) type_specifier -> . CHAR
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT

    RPAREN          shift and go to state 50
    ID              shift and go to state 51
    VOID            shift and go to state 7
    CHAR            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10

    parameter_list                 shift and go to state 49
    parameter_declaration          shift and go to state 52
    type_specifier                 shift and go to state 53
